# Aegis-Private_Solana-AiAgent

./: Cargo.toml  README.md  docker-compose.yml
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: submit.ts
executor/: package-lock.json  package.json
executor/src/: app.module.ts
executor/src/agent/: agent.service.ts
executor/src/idl/: onchain_program.json  onchain_program.ts
executor/src/jobs/: jobs.controller.ts  jobs.module.ts  jobs.service.ts
executor/src/solana/: relayer.service.ts  solana.module.ts  solana.service.ts
mock-relayer/: index.js  package.json
onchain-program/: Anchor.toml  Cargo.toml
onchain-program/programs/onchain-program/: Cargo.toml
onchain-program/programs/onchain-program/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
zk-agent/host/: Cargo.toml
zk-agent/host/src/: main.rs
zk-agent/methods/: Cargo.toml
zk-agent/methods/guest/: Cargo.toml
zk-agent/methods/guest/src/: main.rs
